fix: to show the correct size of images in html_text before load the ckeditor, and set the text_area toolbar up the images in the z-index.

--- a/core/services/service_ckeditor/css/service_ckeditor.less
+++ b/core/services/service_ckeditor/css/service_ckeditor.less
@@ -17,7 +17,7 @@
 	height: auto;
 	padding: 0.05rem;
 	width: calc(100% - 12px);
-	z-index: 1;
+	z-index: 3; // images in html_text overlay the z-index: 2
 
 	// custom toolbar of ddEditor
 	>.toolbar_button {
